fixed forced dark mode issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -112,10 +112,5 @@ ul li
   margin-top: 2rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
 
 
